# sub

./: .gitignore  CITATION.cff  CONTRIBUTING.md  FMloss.py  README.md  auto_encoder.py  encoder.py  flow_matching_model.py  main_train.py  model.py  pyproject.toml  requirements.txt  utils.py
FMGADfinal/: .gitignore  FMloss.py  Makefile  README.md  encoder.py  main_train.py  model.py  utils.py
FMGADfinal/configs/: README.md  books_best.yaml  disney_best.yaml  enron_best.yaml  reddit_best.yaml  universal_five_benchmark.yaml  weibo_best.yaml
FMGADfinal/docs/: COMMANDS.md  REORG_PROPOSAL.md  SUBMISSION_RG_AUDIT.md
FMGADfinal/scripts/: README.md  run_fmgad_ablation.py  run_runtime_fmgad_vs_diffgad_strict.py  run_universal_5x5_sweep.py  run_universal_param_tune.py  summarize_fmgad_ablation.py
configs/: README.md  books.yaml  books_best.yaml  disney.yaml  disney_best.yaml  enron.yaml  enron_best.yaml  reddit.yaml  reddit_best.yaml  universal_five_benchmark.yaml  universal_template.yaml  weibo.yaml
docs/: FAIRNESS.md  POLARITY_LABEL_FREE_AUDIT.md  REPRODUCIBILITY.md  UNIVERSAL_POLARITY_PAPER_EVALUATION.md
docs/internal/: COMMANDS.md  OPEN_SOURCE_CHECKLIST.md  POLARITY_LABEL_FREE_AUDIT.md  README.md  REORG_PROPOSAL.md  SUBMISSION_KEYWORD_AUDIT.md  SUBMISSION_RG_AUDIT.md  (+1 more)
scripts/: README.md  aggregate_results.py  dataset_graph_stats.py  run_ablation.py  run_all_5seeds.py  run_best_yaml_5x5_auc.py  run_fmgad_ablation.py  run_rule1_rule2_five_bench.py  run_single.py  run_universal_5x5_sweep.py  run_universal_param_tune.py  smoke_submission_adapters.py
(+23 files in other folders)
